ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Building_Envelope_System__c/Building_Envelope_System__c.object-meta.xml
<CustomObject>
    <label>Building Envelope System</label>
    <nameField>
        <label>Building Envelope System Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Building Envelope Systems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>