ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Building_Envelope_System__c/fields/Air_Vapour_Barrier__c.field-meta.xml
<CustomField>
    <fullName>Air_Vapour_Barrier__c</fullName>
    <label>Air/Vapour Barrier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AquaBarrier AVB</fullName>
            </value>
            <value>
                <fullName>AquaBarrier AVB LT</fullName>
            </value>
            <value>
                <fullName>AquaBarrier VP</fullName>
            </value>
            <value>
                <fullName>AcrylicStick SA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>