ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Building_Envelope_System__c/fields/Air_Vapour_Barrier_Application__c.field-meta.xml
<CustomField>
    <fullName>Air_Vapour_Barrier_Application__c</fullName>
    <label>Air/Vapour Barrier Application</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Air_Vapour_Barrier__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAM Adhesive</fullName>
            </value>
            <value>
                <fullName>SAM Adhesive LVC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>