ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Building_Envelope_System__c/fields/Ancillary_Items__c.field-meta.xml
<CustomField>
    <fullName>Ancillary_Items__c</fullName>
    <label>Auxiliary Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AquaBarrier TWF</fullName>
            </value>
            <value>
                <fullName>IKO Spray Primer</fullName>
            </value>
            <value>
                <fullName>IKO Water Based Adhesive</fullName>
            </value>
            <value>
                <fullName>AquaBarrier Mastic</fullName>
            </value>
            <value>
                <fullName>MS Detail</fullName>
            </value>
            <value>
                <fullName>IKO Mod Bit Primer</fullName>
            </value>
            <value>
                <fullName>Protectoboard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>