ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Building_Envelope_System__c/fields/ArmourBridge__c.field-meta.xml
<CustomField>
    <fullName>ArmourBridge__c</fullName>
    <label>ArmourBridge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ArmourBridge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>