ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Building_Envelope_System__c/fields/Complete__c.field-meta.xml
<CustomField>
    <fullName>Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When Complete is ticked, all fields will be copied onto the opportunity, so they can be put on the email sent to all involved parties.</description>
    <label>Complete</label>
    <type>Checkbox</type>
</CustomField>