ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Building_Envelope_System__c/fields/Insulation__c.field-meta.xml
<CustomField>
    <fullName>Insulation__c</fullName>
    <label>Insulation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enerfoil</fullName>
            </value>
            <value>
                <fullName>Ener-Air</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>