ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Building_Envelope_System__c/fields/Warranty_Term__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Term__c</fullName>
    <label>Warranty Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5 Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>