ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Building_Envelope_System__c/fields/Waterproofing__c.field-meta.xml
<CustomField>
    <fullName>Waterproofing__c</fullName>
    <label>Waterproofing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AquaBarrier FP</fullName>
            </value>
            <value>
                <fullName>AquaBarrier TG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>