ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Building_Envelope_System__c/fields/Waterproofing_Application__c.field-meta.xml
<CustomField>
    <fullName>Waterproofing_Application__c</fullName>
    <label>Waterproofing Application</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Waterproofing__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAM Adhesive</fullName>
            </value>
            <value>
                <fullName>IKO Mod Bit Primer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>