ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Building_Envelope_System__c/recordTypes/Completed_Building_Envelope_Systems.recordType-meta.xml
<RecordType>
    <fullName>Completed_Building_Envelope_Systems</fullName>
    <active>true</active>
    <label>Completed Building Envelope Systems</label>
</RecordType>